--- a/views/todos.jade
+++ b/views/todos.jade
@@ -8,6 +8,8 @@ block content
       .form-group
         input.form-control(type='input', name='content')
         input.btn.btn-default(type='submit', value='新增')
+		input.btn.btn-default(type='submit', value='测试')
+		input.btn.btn-default(type='submit', value='搜索')
 
   h2 TODO 列表
   div
